--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "file-saver": "^2.0.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
