--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "file-saver": "^2.0.5",
     "npm": "^10.3.0",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.1",
